@@ -1,3 +1,8 @@
+2012-04-29  Jim Hill  <gjthill@gmail.com>
+
+	* Makefile.am (noinst_DATA, dist-hook): build failed after git
+	clean -dfx finish bootstrap.sh removal.
+
 2012-04-13  Paolo Bonzini  <bonzini@gnu.org>
 
 	* sed/compile.c (convert_number): Remove default_char argument,
